[gd_scene load_steps=2 format=2]

[ext_resource path="res://General/Teleporter.gd" type="Script" id=1]

[node name="Teleporter" type="Node2D"]
script = ExtResource( 1 )
delay = 0.1

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="LagTimer" type="Timer" parent="."]
one_shot = true

[node name="TrailParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.5
one_shot = true
speed_scale = 2.0
randomness = 0.1
emission_shape = 2
emission_rect_extents = Vector2( 2, 2 )
flag_align_y = true
spread = 3.0
gravity = Vector2( 0, 0 )
initial_velocity = 175.0
damping = 4.0
scale_amount = 2.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="LagTimer" to="." method="_on_LagTimer_timeout"]
